--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,16 @@ h3 {
 }
 
 .ant-btn {
-  line-height: normal;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input__wrapper {
+  margin-top: 1em;
+  margin-bottom: 1.2em;
+}
+
+.input__wrapper p {
+  padding-bottom: 0.3em;
 }
