modified styling on login page

--- a/src/pages/auth/login/index.module.scss
+++ b/src/pages/auth/login/index.module.scss
@@ -4,18 +4,26 @@
   align-items: center;
   justify-content: center;
 
-  background-color: black;
+  background-color: #eee;
 }
 
 .login__content {
-  border: 1px solid black;
   border-radius: 30px;
   background-color: white;
 
-  padding: 4em 6em;
+  padding: 4em 4em;
   width: 400px;
 }
 
-.login__title {
-  text-align: center;
+.image__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 2em;
+
+  img {
+    width: 100px;
+    height: auto;
+  }
 }
